--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,10 @@
     <string name="circle">Circle</string>
     <string name="error_radiobtn">No shape selected!</string>
     <string name="btn_next">NEXT</string>
-    <string name="text_sec">Inform the data of the </string>
+    <string name="text_sec">Inform the data of the: </string>
     <string name="radius">Radius: </string>
     <string name="base">Base: </string>
     <string name="height">Height: </string>
+    <string name="area">Area: </string>
+    <string name="start_again">Start Again</string>
 </resources>
